--- a/style.css
+++ b/style.css
@@ -90,3 +90,19 @@ label {
 input[type="radio"] {
 	margin-right: 0.625rem;
 }
+
+#username {
+	padding: 0.625rem;
+	border: 1px solid #ddd;
+	border-radius: 0.3125rem;
+	margin-bottom: 0.9375rem;
+}
+
+button {
+	color: white;
+	border: none;
+	padding: 0.625rem 1.25rem;
+	border-radius: 0.3125rem;
+	cursor: pointer;
+	font-size: 1rem;
+}
