--- a/style.css
+++ b/style.css
@@ -106,3 +106,24 @@ button {
 	cursor: pointer;
 	font-size: 1rem;
 }
+
+#submit-game {
+	background-color: #6200ea;
+}
+
+#submit-game:hover {
+	background-color: #3700b3;
+}
+
+#new-player {
+	background-color: #ff0000;
+}
+
+#new-player:hover {
+	background-color: #e50000;
+}
+
+#score-table {
+	width: 100%;
+	border-collapse: collapse;
+	margin-top: 1.25rem;
