--- a/style.css
+++ b/style.css
@@ -127,3 +127,12 @@ button {
 	width: 100%;
 	border-collapse: collapse;
 	margin-top: 1.25rem;
+
+}
+
+#score-table th,
+#score-table td {
+	border: 1px solid #ddd;
+	padding: 0.75rem;
+	text-align: left;
+}
